tests/NormalTests/paczka2/big_fuzzy/57502678.err
Error in line 16: lwAb80L A683 45,3
Error in line 30: n8haga3SH S906 82,3
Error in line 34: n8haga3SH A621 68,6
Error in line 38: S906 A683 74,2
Error in line 33: UNnJpKWt A683 50,7
Error in line 49: R5v S377 42,6
Error in line 58: r06X0hvm2M S377 84,0
Error in line 60: R5v A683 2,9
Error in line 61: r06X0hvm2M A683 63,2
Error in line 66: lwAb80L S377 82,0
Error in line 80: lwAb80L S377 6,3
Error in line 84: 4ot S906 61,0
Error in line 86: UNnJpKWt S377 82,0
Error in line 109: S906 A683 117,6
Error in line 95: 4ot A683 26,3
Error in line 115: lwAb80L A683 73,1
Error in line 129: R5v S906 418,1
Error in line 137: 4ot S906 39,9
Error in line 141: UNnJpKWt S377 134,3
Error in line 142: UNnJpKWt A621 75,8
Error in line 143: UNnJpKWt S906 32,0
Error in line 134: n8haga3SH A621 33,0
Error in line 149: UNnJpKWt S377 79,8
Error in line 145: lwAb80L S377 79,3
Error in line 161: UNnJpKWt A621 22,7
Error in line 162: UNnJpKWt S377 57,8
Error in line 165: r06X0hvm2M A683 66,6
Error in line 166: UNnJpKWt A683 42,9
Error in line 168: r06X0hvm2M S906 61,6
Error in line 153: S906 S377 44,2
Error in line 188: lwAb80L A683 77,0
Error in line 190: UNnJpKWt A621 69,8
Error in line 192: R5v A621 96,0
Error in line 204: UNnJpKWt S906 373,5
Error in line 211: lwAb80L S906 56,9
Error in line 216: lwAb80L A683 32,0
Error in line 222: r06X0hvm2M S906 25,3
Error in line 229: UNnJpKWt A621 67,0
Error in line 234: r06X0hvm2M S906 20,6
Error in line 220: 4ot A621 176,7
Error in line 239: 4ot A683 85,8
Error in line 249: 4ot S377 47,88
